--- a/landing/index.html
+++ b/landing/index.html
@@ -16,6 +16,9 @@
     <title>Bootstrap 5</title>
   </head>
   <body>
+
+  
+
     <!-- Main Body -->
     <div class="container-lg my-5 pt-1 cont justify-content-center">
       <h2 class="text-center my-5 headi"><span class="sp">Blank</span> Coding 👩‍💻</h2>
@@ -29,8 +32,6 @@
         <br>
         3️⃣ Hello world
       </p>
-
-
       <!-- FORM -->
       <form class="m-5" id="form">
         <label for="custom-textarea" class="h4">Code here 👇</label>
@@ -67,10 +68,10 @@
   </body>
 
   <!-- GSAP ANIMATION -->
-  <script
+  <!-- <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"
-  ></script>
+  ></script> -->
   <script src="app.js"></script>  
 </html>
