Question block added

--- a/landing/index.html
+++ b/landing/index.html
@@ -33,6 +33,14 @@
         <br />
         3️⃣ Hello world
       </p>
+      <div class="question-container mx-5 p-2 mt-3">
+        <h1 class="text-center h3 p-2">Problem Statement ❓</h1>
+        <p class="lead p-3">Program to find Unique element inside array <br>
+          Consider an example given below − <br>
+          arr[5] = {1,1,2,3,3}<br>
+          Unique element - 2 
+        </p>
+      </div>
       <!-- FORM -->
       <form class="m-5" id="form">
         <label for="custom-textarea" class="h4">Code here 👇</label>
