comments added in landing/app.js

--- a/landing/index.html
+++ b/landing/index.html
@@ -34,9 +34,10 @@
         3️⃣ Hello world
       </p>
       <div class="question-container mx-5 p-2 mt-3">
-        <h1 class="text-center h3 p-2">Problem Statement ❓</h1>
-        <p class="lead p-3">Program to find Unique element inside array <br>
-          Consider an example given below − <br>
+        <h1 class="text-center h3 fw-bolder p-2">Problem Statement ❓</h1>
+        <p class="lead p-3 fw-bold">Program to find Unique element inside array <br>
+          Consider an example given below : <br>
+          Example 1 : <br>
           arr[5] = {1,1,2,3,3}<br>
           Unique element - 2 
         </p>
