--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./login/login.css">
+    <link rel="stylesheet" href="login.css">
     <title>Document</title>
     
 </head>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="formSubmitContainer submit_form">
-            <a href="./landing/index.html"><button class="btn btn-lg btn-primary btn-m" type="submit">
+            <a href="../landing/index.html"><button class="btn btn-lg btn-primary btn-m" type="submit">
               Submit ✅
             </button></a>
         </div>
