Add Countdown Timer

--- a/landing/index.html
+++ b/landing/index.html
@@ -18,21 +18,14 @@
     <title>Bootstrap 5</title>
   </head>
   <body>
+    <div class="timer-container">
+      <p class="h1">Timer</p>
+    </div>
     <!-- Main Body -->
     <div class="container-lg my-5 pt-1 cont justify-content-center">
       <h2 class="text-center my-5 headi">
         <span class="sp">Blank</span> Coding 👩‍💻
       </h2>
-      <p class="h5 mx-5">
-        Event Instruction:
-        <br />
-        <br />
-        1️⃣ Hello world
-        <br />
-        2️⃣ Hello world
-        <br />
-        3️⃣ Hello world
-      </p>
       <div class="question-container mx-5 p-2 mt-3">
         <h1 class="text-center h3 fw-bolder p-2">Problem Statement ❓</h1>
         <p class="lead p-3 fw-bold">Program to find Unique element inside array <br>
