--- a/landing/index.html
+++ b/landing/index.html
@@ -18,8 +18,8 @@
     <title>Bootstrap 5</title>
   </head>
   <body>
-    <div class="timer-container">
-      <p class="h1">Timer</p>
+    <div class="timer-container card">
+      <span id="timer">20:00</span>
     </div>
     <!-- Main Body -->
     <div class="container-lg my-5 pt-1 cont justify-content-center">
